# imperial_projects

y2-t3_keep-playing/: .gitignore  README.md  docker-compose.yml
y2-t3_keep-playing/backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
y2-t3_keep-playing/backend/api/management/commands/: seed_demo_data.py
y2-t3_keep-playing/backend/app/: admin.py  email.py  permissions.py  urls.py
y2-t3_keep-playing/backend/app/management/commands/: seed_demo_data.py
y2-t3_keep-playing/backend/app/models/: __init__.py  coach.py  event.py  organiser.py  user.py
y2-t3_keep-playing/backend/app/serializers/: __init__.py  coach.py  event.py  organiser.py  user.py
y2-t3_keep-playing/backend/app/views/: __init__.py  auth.py  coaches.py  events.py  organisers.py  users.py
y2-t3_keep-playing/backend/config/: asgi.py  settings.py  wsgi.py
y2-t3_keep-playing/backend/docker/: Dockerfile  entrypoint.sh
y2-t3_keep-playing/backend/keep_playing/: settings.py
y2-t3_keep-playing/backend/tests/: auth_test.py  coaches_test.py  conftest.py  email_test.py  events_test.py  models_test.py  organisers_test.py  users_test.py
y2-t3_keep-playing/frontend/: .gitignore  Dockerfile  README.md  nginx.conf  phone-frame.html  pubspec.yaml
y3-t1_choose-your-own-adventure/: .env.example  .gitignore  README.md  docker-compose.yml
y3-t1_choose-your-own-adventure/backend/: .dockerignore  Dockerfile  requirements.txt
y3-t1_choose-your-own-adventure/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json
(+223 files in other folders)
